fix icon align & size

--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -68,6 +68,9 @@
 
     &.icon-visitor-profile {
       display: inline;
+      font-size: 16px;
+      line-height: 16px;
+      vertical-align: middle;
     }
   }
 
@@ -403,6 +406,10 @@ a.visitor-log-visitor-profile-link {
 
 #widgetLivewidget {
   .visitorLogIcons {
+    &:before {
+      content: " ";
+      display: block;
+    }
     display: inline;
   }
 
